# egen

./: .editorconfig  .gitignore  Cargo.toml  README.md  definition.schema.json
.github/workflows/: build.yml  test.yml
src/: cmd.rs  main.rs  test_utils.rs
src/cmd/: error.rs  input.rs  mod.rs  output.rs
src/entities/: mod.rs
src/entities/inputs/: array.rs  composite.rs  composite_or_primitive.rs  enumeration.rs  field.rs  interface.rs  mod.rs  primitives.rs  rename.rs  root.rs  rs.rs  structure.rs  ts.rs  types.rs
src/fixtures/: complex.rs  complex.rs.out  complex.yml  dup_reference.rs  dup_reference.yml  enumeration.rs  enumeration.yml  mod.rs  not_found.rs  reference.rs  reference.rs.out  reference.yml  self_reference.rs  self_reference.yml  simple.rs  simple.yml  simple_struct.rs  simple_struct.rs.out  simple_structure.yml  struct_array.rs  struct_array.yml  struct_has_field_attr.yml  struct_w_field_attr.rs.out  struct_w_fld_attr.rs  two_references.rs  typescript_rename.rs  typescript_rename.yml
src/fixtures/rs_out/: complex.rs  enumeration.rs  mod.rs  reference.rs  self_reference.rs  simple_structure.rs  struct_array.rs  typescript_rename.rs
src/fixtures/zod_ts_out/: complex.zod.ts  enum.zod.ts  package.json  pnpm-lock.yaml  reference.zod.ts  self-reference.zod.ts  simple-structure.zod.ts  struct-array.zod.ts  (+2 more)
src/macros/: setter.rs
src/manipulators/: case_manipulator.rs  case_modifier.rs  mod.rs
src/services/: mod.rs
src/templates/: enum.rs.jinja  enum.zod.ts.jinja  output.rs.jinja  struct.rs.jinja  struct.zod.ts.jinja  structure.rs.jinja
(+15 files in other folders)
