[package]
name = "egen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
err-derive = "0.3.1"
glob = "0.3.1"
map-macro = "0.2.6"
minijinja = "1.0.10"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_yaml = "0.9.27"

[dev-dependencies]
bytes = "1.5.0"
console = "0.15.7"
similar = "2.3.0"
