[package]
name = "egen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
err-derive = "0.3.1"
glob = "0.3.1"
map-macro = "0.3.0"
minijinja = "2.1.0"
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_yaml = "0.9.34"

[dev-dependencies]
bytes = "1.6.0"
console = "0.15.8"
similar = "2.5.0"
